:bug: Add missing <title> in application HTML head

--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- FIXME: custom favicon crashes SvelteKit's adapter-static: <link rel="icon" href="/favicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Praca</title>
     %sveltekit.head%
   </head>
 
